--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -15,7 +15,7 @@
   </head>
 
   <body class="body">
-    <div id="root"></div>
+    <div id="root" class="root"></div>
   </body>
 
 </html>
